<resources>
    <string name="app_name">12 CH Tele ECG</string>
    <string name="new_">New</string>
    <string name="load">Load</string>
    <string name="select_leads">Select no of leads</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_start_up">12CH. TELE ECG</string>
    <string name="title_activity_generate_report">Generate_report</string>
    <string name="title_activity_filechooser">Filechooser</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_bluetooth_connect">Bluetooth_connect</string>
    <string name="title_activity_paintview">Paintview</string>
    <string name="title_activity_paint_view">PaintView</string>
    <string name="barc_logo">BARC Logo</string>
    <string name="start">Start</string>
    <string name="previous">previous</string>
    <string name="stop">Stop</string>
    <string name="next">Next</string>
    <string name="mode">Mode</string>
    <string name="test">Test</string>
    <string name="ecg">ECG</string>
    <string name="generate_report">Generate Report</string>
    <string name="simultaneous_report">Simultaneous Report</string>
    <string name="sequential_report">Sequential Report</string>
    <string name="acq_mode">ACQ Mode</string>
    <string name="auto_mode">Auto Mode</string>
    <string name="manual_mode">Manual Mode</string>
    <string name="patient_details">Patient Details</string>
    <string name="load_data">Load Data</string>
    <string name="send">Send</string>
    <string name="back_to_main_page">Back to Main Page</string>
    <string name="new_patient">New Patient</string>
    <string name="prev_lead">Prev Lead</string>
    <string name="next_lead">Next Lead</string>
    <string name="repeat_acquisition">Repeat Acquisition</string>
    <string name="filter_off">Filter OFF</string>
    <string name="filter">Filter</string>
    <string name="zero_to_oneFifty">0 to 150(Hz)</string>
    <string name="five_to_forty">5 to 40 Hz</string>
    <string name="zero_to_forty">0 to 40 Hz</string>
    <string name="five_to_twentyFive">5 to 25 Hz</string>
    <string name="zero_to_twentyFive">0 to 25 Hz</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="six">6</string>
    <string name="eight">8</string>
    <string name="twelve">12</string>
    <string name="gain">Gain</string>
    <string name="patientName">Patient Name</string>
    <string name="chssno">CHSSNO</string>
    <string name="birthDate">Date of Birth</string>
    <string name="patientAge">Patient Age</string>
    <string name="cm">(cm)</string>
    <string name="kg">(Kg)</string>
    <string name="medications">Medications</string>
    <string name="bloodPressure">Blood Pressure</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="svr">SVR</string>
</resources>
